openshift/quarkus-native/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-todo-native
  labels:
    app: quarkus-todo-native
    app.kubernetes.io/name: quarkus-todo-native
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: quarkus-spring-comparison
spec:
  to:
    kind: Service
    name: quarkus-todo-native
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
